# ansible-role-aws-sm-plugin

./: .pre-commit-config.yaml  pyproject.toml
