[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "ansible-role-aws-ssm-plugin"

[tool.poetry.dependencies]
python = "^3.12"

ansible = "^11.3.0"
docker = "^7.1.0"
molecule = "^25.3.1"

ansible-lint = { version = "^25.1.3", markers = "platform_system != 'Windows'" }

molecule-plugins = { version = "^23.7.0", extras = ["docker"] }
